syntax = "proto3";
package distask.contracts;

enum StatusCode {
    SUCCESS = 0;
    WARNING = 1;
    ERROR = 2;
};

message DistaskRequest {
    string taskName = 1;
    repeated string parameters = 2;
};

message DistaskResponse {
    StatusCode status = 1;
    string result = 2;
    string errorMessage = 3;
    string stackTrace = 4;
};

message RegistrationRequest {
    string name = 1;
    string group = 2;
    string host = 3;
    int32 port = 4;
};

message RegistrationResponse {
    StatusCode status = 1;
    string rejectMessage = 2;
    enum RejectReason {
        NONE = 0;
        GENERAL = 1;
        ALREADY_EXISTS = 2;
    }
    RejectReason reason = 3;
};

service DistaskService {
    rpc Execute(DistaskRequest) returns (DistaskResponse) {}
};

service DistaskRegistrationService {
    rpc Register(RegistrationRequest) returns (RegistrationResponse) {}
};
